[package]
name = "playground-future-2.0"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/playground-future-2.0"
documentation = "https://docs.rs/playground-future-2.0"
description = "Experimenting with a different formulation of Future"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>"
]

[features]

[dependencies]

[dev-dependencies]
